fix wrap

--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
 
 header {
     flex: 0 80px;
+    flex-wrap: wrap;
     background-color: rgb(108, 177, 237);
 }
 
@@ -65,6 +66,7 @@ main {
 
 footer {
     flex: 0 30px;
+    flex-wrap: wrap;
     background-color: rgb(108, 177, 237);
 }
 
